# gpr-rust

./: .gitignore  Cargo.toml  README.md  alire.toml  build.rs
.github/workflows/: tests.yml
examples/ada_hello/: Cargo.toml  build.rs
examples/ada_hello/ada_hello/: ada_hello.gpr
examples/ada_hello/ada_hello/src/: ada_hello.adb  ada_hello.ads
examples/ada_hello/src/: main.rs
src/: binding.rs  error.rs  lib.rs
testdata/: invalid.gpr  test2.gpr  testlib.gpr
testdata/src/: test2.adb  test2.ads
